# orchestrator

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pr_agent.toml  .pre-commit-config.yaml  .semgrep.yml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.browser  LICENSE  Makefile  README.md  SECURITY.md  compose.browser.yaml  compose.init.yaml  compose.yaml  docker-compose.override.yml.example  index.html  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.json  branch-protection.md  dependabot.yml  review-bots.yml
.github/ISSUE_TEMPLATE/: agent_task.yml  bug.yml  config.yml  epic.yml  question.yml
.github/rulesets/: main-quality-gates.json
.github/scripts/: pr_reviewer.py
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  pr-reviewer.yml  release-image.yml  request-copilot-review.yml  security.yml
.issue-bodies/: p2-litellm.md
.tmp-issues/: p1-skeleton.md  p3-classify-evals.md  p3-classify.md
assets/js/: 0e384e19.c4427bac.js  17896441.4bc87920.js  1df93b7f.aa533d86.js  4d54d076.2ee34b13.js  5281b7a2.9eb7da6d.js  7cc58a6a.61c8d8da.js  a94703ab.b696c44b.js  b47a527a.f42abd75.js  e6ccb422.f3223476.js  main.412686e7.js  runtime~main.72443af9.js
config/: mcp_servers.yaml.example
coracle/: __init__.py  cli.py
coracle/api/: __init__.py  _mcp_attach.py  app.py  embeddings.py  openai_compat.py  tasks.py
coracle/config/: __init__.py  quotas.toml  settings.py  settings.toml
coracle/core/: __init__.py  classifier.py  ram_monitor.py  recovery.py  state.py  workspace.py
coracle/core/migrations/: 001_initial.sql  __init__.py
coracle/core/pipeline/: __init__.py  consolidate.py
coracle/guardrails/: __init__.py  budget.py  injection.py  policy.py  secrets.py
coracle/interfaces/: __init__.py  cli.py  mcp_server.py  model_profiles.py  openai_compat.py
coracle/mcp/: __init__.py  __main__.py  server.py
coracle/models/: __init__.py  narrator.py  ollama_local.py
coracle/models/big_ai/: __init__.py  errors.py  litellm_router.py  quota.py
coracle/observability/: __init__.py  audit.py  otel.py
coracle/pipeline/: execute.py  parse.py  plan.py  refine.py  verify.py
coracle/prompts/: __init__.py  _loader.py  classify.md  parse_repair.md  plan.md  refine.md  verify.md
coracle/providers/: __init__.py  fallback.py
coracle/runtime/: __init__.py  control.py  quota.py  status.py  status_b.py  status_c.py
coracle/tools/: __init__.py  _browser_worker.py  _registrations.py  _sandbox.py  _url_guard.py  browser.py  fs.py  git.py  mcp_client.py  registry.py  shell.py  web.py
docs/: DEPLOY.md  DEVELOPMENT.md  EVALS.md  OBSERVABILITY.md  PLAN.md  RELEASES.md  REVIEW_BOTS.md  SECURITY.md  SMOKE.md  VS_LITELLM.md  architecture.html  comparison.html  contributing.html  integrations.html  intro.html
docs/integrations/: claude-code.md  codex.md  opencode.md
evals/: __init__.py  __main__.py  cli.py  harness.py  runner.py  scorers.py
evals/classify/: __init__.py  __main__.py  golden.jsonl  runner.py
evals/suites/: baseline.yaml  classify.yaml  refine.yaml  verify.yaml
orchestrator/: __init__.py  cli.py
orchestrator/api/: __init__.py  _mcp_attach.py  app.py  embeddings.py  openai_compat.py  tasks.py
orchestrator/config/: __init__.py  settings.py  settings.toml
orchestrator/core/: __init__.py  classifier.py  logging.py  recovery.py  scheduler.py  state.py  workspace.py
orchestrator/core/migrations/: 001_initial.sql  __init__.py
orchestrator/core/pipeline/: bundle.py
orchestrator/guardrails/: pii.py  pipeline.py
orchestrator/interfaces/: cli.py  mcp_server.py  model_profiles.py  openai_compat.py
orchestrator/mcp/: __init__.py  __main__.py  server.py
orchestrator/models/: narrator.py
orchestrator/models/big_ai/: litellm_router.py
orchestrator/observability/: __init__.py  audit.py  otel.py
orchestrator/pipeline/: __init__.py  execute.py  parse.py  plan.py  refine.py  verify.py
orchestrator/prompts/: _loader.py  classify.md  parse_repair.md  plan.md  verify.md
orchestrator/providers/: __init__.py  fallback.py
orchestrator/runtime/: quota.py  status_b.py  status_c.py
orchestrator/tools/: __init__.py  _browser_worker.py  _registrations.py  _url_guard.py  browser.py  fs.py  git.py  mcp_client.py  registry.py  shell.py  web.py
scripts/: dev_setup.ps1  dev_setup.sh  run_evals.py  smoke_ram_swap.ps1  smoke_ram_swap.sh
tests/: test_cli.py  test_logging.py  test_ollama_integration.py  test_ollama_local.py  test_ram_monitor.py  test_scheduler.py  test_settings.py  test_state.py
tests/api/: test_embeddings.py  test_mcp_in_chat.py  test_openai_compat.py  test_tasks.py
tests/core/: test_classifier.py  test_recovery.py
tests/core/pipeline/: test_consolidate.py
tests/evals/: test_classify_runner.py  test_harness.py  test_run_evals_script.py
tests/guardrails/: test_budget.py  test_injection.py  test_integration.py  test_pii.py  test_pipeline.py  test_policy.py  test_secrets.py
tests/interfaces/: test_cli.py  test_cli_app.py  test_model_profiles.py
tests/mcp/: test_server.py
tests/models/big_ai/: test_litellm_router.py
tests/observability/: __init__.py  test_audit.py
tests/pipeline/: test_execute.py  test_parse.py  test_plan.py  test_refine.py  test_verify.py
tests/providers/: test_fallback.py
tests/runtime/: test_control.py  test_quota.py  test_status_mode_b.py  test_status_mode_c.py  test_status_snapshot.py
tests/smoke/: conftest.py  test_ram_swap.py
tests/tools/: __init__.py  test_browser.py  test_fs.py  test_git.py  test_mcp_client.py  test_registry.py  test_shell.py  test_url_guard.py  test_web.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: architecture.md  comparison.md  contributing.md  intro.md
website/docs/integrations/: index.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
