[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "coracle"
dynamic = ["version"]
description = "Local-first agent coracle (Phase 1 skeleton)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "skgandikota" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=5.9",
    "pydantic>=2.13.3",
    "structlog>=24",
    "httpx>=0.28.1",
    "selectolax>=0.3.21",
    "duckduckgo-search>=6.0",
    "mcp>=1.27.0,<2",
    "pyyaml>=6.0",
    "jsonschema>=4.26.0",
    "litellm>=1.50",
    "typer>=0.12",
    "pathspec>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "fastapi>=0.110",
    "starlette>=0.37",
]

[project.scripts]
coracle = "coracle.interfaces.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10,<3",
    "build>=1.2",
    "respx>=0.23.1",
    "pre-commit>=3.7",
]
browser = [
    "playwright>=1.58.0",
]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
evals = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://github.com/skgandikota/coracle"
Issues = "https://github.com/skgandikota/coracle/issues"
Source = "https://github.com/skgandikota/coracle"

[tool.setuptools.packages.find]
include = ["coracle*", "evals*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
coracle = ["config/*.toml", "core/migrations/*.sql"]

[tool.setuptools_scm]
fallback_version = "0.1.0.dev0"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".github/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = false
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "tests/",
    "\\.github/scripts/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "duckduckgo_search.*",
    "selectolax.*",
    "psutil.*",
    "respx.*",
    "yaml.*",
    "litellm.*",
    "mcp.*",
    "playwright.*",
]
ignore_missing_imports = true

# Legacy modules: errors not yet enforced. Track in #52 follow-up to
# tighten per-module as code is refactored.
[[tool.mypy.overrides]]
module = [
    "coracle.config.settings",
    "coracle.observability.otel",
    "coracle.tools.shell",
    "coracle.tools.web",
    "coracle.tools._registrations",
    "coracle.tools.mcp_client",
    "coracle.core.pipeline.consolidate",
    "coracle.interfaces.cli",
    "coracle.api.tasks",
    "coracle.api.openai_compat",
    "coracle.models.big_ai.litellm_router",
    "coracle.pipeline.parse",
    "coracle.core.classifier",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not ollama'"
markers = [
    "ollama: live evals that hit a local Ollama instance (opt-in via -m ollama)",
    "smoke: mocked smoke tests; safe in CI",
    "live: live smoke tests against a real Ollama daemon; require --live",
]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["coracle", "evals"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]